# feral

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  Cargo.toml  FERAL-PROJECT-SPEC.md  Makefile  NOTICE  README.md  tasks.org
.claude/: settings.json
.claude/agents/: faer-expert.md  ipopt-expert.md  mumps-expert.md  spral-expert.md
.crucible/: references.bib
.crucible/wiki/: MANIFEST.md  index.org
.github/workflows/: ci.yml  python-wheels.yml  release.yml
benches/: schur_kernel.rs
crates/feral-amd/: Cargo.toml  README.md
crates/feral-amd/src/: algo.rs  error.rs  lib.rs  pattern.rs  stats.rs  workspace.rs
crates/feral-amd/tests/: oracle_match.rs
crates/feral-amf/: Cargo.toml
crates/feral-amf/src/: lib.rs  stats.rs
crates/feral-kahip/: Cargo.toml
crates/feral-kahip/src/: cycle.rs  data_reduction.rs  flow.rs  flow_refine.rs  graph.rs  lib.rs  node_nd.rs  node_separator.rs
crates/feral-metis/: Cargo.toml
crates/feral-metis/src/: coarsen.rs  fm_refine.rs  graph.rs  initial_partition.rs  lib.rs  node_nd.rs  rng.rs  separator.rs
crates/feral-metis/tests/: dense_quotient.rs
crates/feral-ordering-core/: Cargo.toml
crates/feral-scotch/: Cargo.toml
crates/feral-scotch/src/: band_fm.rs  graph.rs  halo_fm.rs  lib.rs  node_nd.rs  vertex_separator.rs
crates/feral-scotch/tests/: issue_3_kkt_repro.rs
dev/: assemble-context.sh  benchmark-history.md  constraints.md  context.md  decisions.md  phase1-retrospective.org  phase2-retrospective.org  references.bib  tried-and-rejected.md
dev/corpus-expansion/: tier1_pde_mid.txt  tier2_pde_large.txt  tier3_nonpde_large.txt  tier4_broad_sweep.txt  tier_manifest.md
dev/debugging/: 2026-04-12-acopp30-regression.md  2026-05-10-pounce-heart6-residual.md  2026-05-12-cont201-cached-headroom.md
dev/journal/: 2026-04-11-01.org  2026-04-11-02.org  2026-04-11-03.org  2026-04-11-04.org  2026-04-12-01.org  2026-04-12-02.org  2026-04-12-03.org  2026-04-12-04.org  2026-04-12-05.org  2026-04-12-06.org  2026-04-12-07.org  2026-04-12-08.org  2026-04-12-09.org  2026-04-13-01.org  2026-04-13-02.org  2026-04-13-03.org  2026-04-13-04.org  2026-04-13-05.org  2026-04-14-01.org  2026-04-14-02.org  2026-04-14-04.org  2026-04-14-05.org  2026-04-16-01.org  2026-04-17-01.org  2026-04-17-02.org  2026-04-17-03.org  2026-04-18-01.org  2026-04-18-02.org  2026-04-18-03.org  2026-04-18-04.org  2026-04-18-05.org  2026-04-18-06.org  2026-04-18-08.org  2026-04-18-09.org  2026-04-19-01.org  2026-04-19-02.org  2026-04-19-03.org  2026-04-19-04.org  2026-04-20-01.org  2026-04-20-02.org  (+75 more)
dev/notes/: mittelmann-harvest.md
dev/plans/: amf-clean-room.md  bench-denoise.md  dense-kernel-blas3.md  dense-kernel-speedup.md  dense-kernel-w2-2x2-swap.md  factor-workspace.md  feral-ipopt-shim.md  issue-13-overhead.md  issue-2-kkt-pivot-default.md  issue-47-explicit-zero-routing.md  kkt-cascade-fix1-fine-grained-delay.md  kkt-cascade-fix2-2x2-inertia-cancellation.md  kkt-feature-gaps.md  kkt-zero-2x2-cascade-fix.md  lever-c-adaptive-scaling.md  mc64-missing-diag-skip.md  mc64-scaling-spread-guard.md  mc64-scaling.md  mc64-value-bounded-cache.md  near-singularity-signal.md  ordering-amd-upgrade.md  ordering-crate-contract.md  ordering-kahip-driver-integration.md  ordering-kahip.md  ordering-metis.md  ordering-scotch.md  per-factor-cost-cluster.md  phase-1b-consensus-exit.md  phase-1b-sparse-solver.md  phase-2-planning.md  phase-2.10-supernode-profiler.md  phase-2.11-small-front-amalgamation.md  phase-2.12-column-renumbering.md  phase-2.13-tail-diagnostic.md  phase-2.3-delayed-pivoting.md  phase-2.4.1-blocked-ldlt.md  phase-2.4.2-simd-schur-kernel.md  phase-2.4.3-blas3-trailing-update.md  phase-2.4.3-block32-kernel.md  phase-2.4.3-rook-rescue.md  (+21 more)
dev/profiles/: bench_solver_corpus_2026-04-28.json.syms.json  bench_solver_corpus_2026-04-28.summary.txt
dev/research/: 2x2-bk-inertia-accounting.md  acopp30-plateau-2.md  adversarial-testing.md  amf-clean-room.md  blas3-trailing-update.md  block32-register-resident-kernel.md  build-row-indices-fix.md  (+102 more)
examples/: bench_column_counts.rs  debug_acopp30_mc64.rs  dense_vs_sparse.rs  feral_time.rs  min_multisupernode.rs  parity_config_sweep.rs  profile_sparse_smallfront.rs  scan_acopp30_divergence.rs  select_parity_panel.rs  triage_acopp30.rs  triage_acopp30_0004.rs  triage_bratu3d.rs  triage_ceri651dls.rs  triage_dense_acopp30.rs  triage_discs_amd.rs  triage_errinbar.rs  triage_fbrain3ls.rs  triage_large_cresc132.rs  triage_mgh10s.rs  triage_pfit2_0300.rs  triage_plateau.rs  triage_polak6.rs  triage_residual_margin.rs  triage_sparse_kernel_diff.rs  triage_sparse_residual_edge.rs  triage_swopf_hydcar20.rs  verify_column_counts.rs
external_benchmarks/: .gitignore  README.md
feral-ipopt-shim/: Makefile
manuscript/: feral.org  references.bib
python/: .gitignore  Cargo.toml  README.md  pyproject.toml
python/examples/: discopt_ipm_kkt.py  jax_quickstart.py  quickstart.py
python/feral/: __init__.py  ipm.py  jax.py
python/src/: lib.rs
python/tests/: test_basic.py  test_ipm.py  test_jax.py  test_scipy_interop.py  test_sqd.py
scripts/: categorize-sparse-only.py  characterize-corpus.py  check-amd-cleanroom.sh  collect-kkt.sh  harvest-mittelmann-kkt.sh  visualize-fill.py
src/: capi.rs  error.rs  inertia.rs  lib.rs
tests/: amf_corpus_oracle.rs  auto_strategy.rs  blocked_ldlt.rs  build_row_indices_trailing_invariant.rs  delayed_pivoting.rs  dense_fast_path.rs  dense_ldlt.rs  factor_scratch_parity.rs  factor_workspace_parity.rs  fma_opt_in_roundtrip.rs  issue_15_cascade_arm_gate.rs  issue_17_robot_1600_cascade_off.rs  issue_18_narx_cfy_cascade_off.rs  issue_38_static_pivot.rs  kkt_hardening.rs  kkt_matrices.rs  ldlt_compress.rs  mc64_end_to_end.rs  mc64_regression.rs  mc64_scaling.rs  multi_rhs.rs  parallel_parity.rs  parity.rs  pivot_rejection.rs  pounce_interface.rs  profiler_smoke.rs  rook_rescue.rs  rook_rescue_kkt.rs  small_leaf_parity.rs  sparse_postorder.rs  sparse_refined.rs  sqd_fast_path.rs  symbolic_profiler.rs  threshold_consistency.rs  tiny_fast_path.rs
(+371 files in other folders)
