[workspace]
members = [".", "crates/feral-ordering-core", "crates/feral-amd", "crates/feral-metis"]
resolver = "2"

[package]
name = "feral"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Sparse symmetric indefinite direct solver in pure Rust"

[lib]
name = "feral"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# SIMD backbone for the Schur-update micro-kernel (Phase 2.4.2).
# Pinned to faer 0.22.x's exact version. Usage is confined to
# src/dense/schur_kernel.rs; see dev/decisions.md for the
# replacement trigger and interface boundary.
pulp = { version = "0.22.2", default-features = false, features = ["x86-v3"] }

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
# rmumps used only for reference timing comparisons in benchmarks:
# rmumps = { path = "../ripopt/rmumps" }  # uncomment when needed

[[bench]]
name = "dense_factor"
harness = false

[[bench]]
name = "schur_kernel"
harness = false
