[workspace]
members = [".", "crates/feral-ordering-core", "crates/feral-amd", "crates/feral-amf", "crates/feral-metis", "crates/feral-scotch", "crates/feral-kahip"]
resolver = "2"

[package]
name = "feral"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Sparse symmetric indefinite direct solver in pure Rust"

[lib]
name = "feral"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "bench_orderings"
path = "src/bin/bench_orderings.rs"

[[bin]]
name = "bench_solver_reuse"
path = "src/bin/bench_solver_reuse.rs"

[[bin]]
name = "policy4_diag"
path = "src/bin/policy4_diag.rs"

[[bin]]
name = "parallel_corpus_parity"
path = "src/bin/parallel_corpus_parity.rs"

[[bin]]
name = "diag_acopr"
path = "src/bin/diag_acopr.rs"

[[bin]]
name = "diag_par_repeat"
path = "src/bin/diag_par_repeat.rs"

[[bin]]
name = "diag_parent_unique"
path = "src/bin/diag_parent_unique.rs"

[[bin]]
name = "diag_par_firstdiff"
path = "src/bin/diag_par_firstdiff.rs"

[[bin]]
name = "diag_par_frontal_hash"
path = "src/bin/diag_par_frontal_hash.rs"

[[bin]]
name = "diag_mc64_cycles"
path = "src/bin/diag_mc64_cycles.rs"

[[bin]]
name = "diag_compression_bench"
path = "src/bin/diag_compression_bench.rs"

[[bin]]
name = "diag_dense_tail"
path = "src/bin/diag_dense_tail.rs"

[[bin]]
name = "diag_compress_profile"
path = "src/bin/diag_compress_profile.rs"

[[bin]]
name = "diag_fill_tail"
path = "src/bin/diag_fill_tail.rs"

[[bin]]
name = "diag_split_tail"
path = "src/bin/diag_split_tail.rs"

[[bin]]
name = "diag_supernode_cost"
path = "src/bin/diag_supernode_cost.rs"

[[bin]]
name = "diag_small_leaf"
path = "src/bin/diag_small_leaf.rs"

[[bin]]
name = "diag_leaf_profile"
path = "src/bin/diag_leaf_profile.rs"

[[bin]]
name = "diag_chainwoo_profile"
path = "src/bin/diag_chainwoo_profile.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# SIMD backbone for the Schur-update micro-kernel (Phase 2.4.2).
# Pinned to faer 0.22.x's exact version. Usage is confined to
# src/dense/schur_kernel.rs; see dev/decisions.md for the
# replacement trigger and interface boundary.
pulp = { version = "0.22.2", default-features = false, features = ["x86-v3"] }
# Data-parallelism for the multifrontal assembly tree (Phase 2.5.2).
# Pure-Rust, fits the zero-non-Rust-dep constraint. Used only by
# the opt-in parallel driver in src/numeric/factorize.rs; the
# sequential path remains the default and reference implementation.
rayon = "1.10"
# Ordering crates are consumed by `symbolic_factorize_with_method`
# via the OrderingMethod enum in src/symbolic/mod.rs. The in-tree
# src/ordering/amd.rs is still the default (OrderingMethod::Amd)
# pending retirement per dev/decisions.md.
feral-ordering-core = { path = "crates/feral-ordering-core" }
feral-amd = { path = "crates/feral-amd" }
feral-amf = { path = "crates/feral-amf" }
feral-metis = { path = "crates/feral-metis" }
feral-scotch = { path = "crates/feral-scotch" }
feral-kahip = { path = "crates/feral-kahip" }

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
# rmumps used only for reference timing comparisons in benchmarks:
# rmumps = { path = "../ripopt/rmumps" }  # uncomment when needed

[[bench]]
name = "dense_factor"
harness = false

[[bench]]
name = "schur_kernel"
harness = false
