[package]
name = "feral-amd"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Approximate Minimum Degree (AMD) fill-reducing ordering, quotient-graph algorithm (Amestoy, Davis & Duff 1996, 2004). Pure Rust, standalone."
repository = "https://github.com/jkitchin/feral"
readme = "README.md"
keywords = ["sparse", "ordering", "amd", "fill-reducing", "linear-algebra"]
categories = ["mathematics", "science"]

[lib]
name = "feral_amd"

# CLI (`feral-amd`) and bench (`feral-amd-bench`) binaries land in
# Commit 8. They live under `src/bin/` when added.

[dependencies]
feral-ordering-core = { path = "../feral-ordering-core", version = "0.1" }

[dev-dependencies]
