[package]
name = "feral-metis"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Multilevel nested-dissection fill-reducing ordering (Karypis & Kumar 1998). Pure Rust, clean-room, standalone. Implements the FERAL ordering-crate contract."
authors = ["John Kitchin <jkitchin@andrew.cmu.edu>"]
repository = "https://github.com/jkitchin/feral"
homepage = "https://github.com/jkitchin/feral"
keywords = ["sparse", "ordering", "metis", "nested-dissection", "linear-algebra"]
categories = ["mathematics", "science"]

[lib]
name = "feral_metis"

[dependencies]
feral-ordering-core = { path = "../feral-ordering-core", version = "0.1" }
feral-amd = { path = "../feral-amd", version = "0.1" }

[dev-dependencies]
